--- a/package.json
+++ b/package.json
@@ -1,15 +1,45 @@
 {
   "name": "pulltorefresh",
-  "version": "1.0.0",
-  "description": "Pull To Refresh ===",
-  "main": "index.js",
+  "version": "0.0.0",
+  "description": "Pull To Refresh",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tarima -ws",
+    "build": "tarima -f"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Rafael Soto",
+  "license": "MIT",
+  "tarima": {
+    "public": ".",
+    "dest": "dist",
+    "cacheFile": "dist/build.json",
+    "bundle": true,
+    "rename": [
+      "**/src/index.js:{filepath/1}/pulltorefresh.js"
+    ],
+    "ignoreFiles": [
+      ".gitignore"
+    ],
+    "devPlugins": [
+      "tarima-lr"
+    ],
+    "bundleOptions": {
+      "extensions": {
+        "js": "es6"
+      },
+      "rollup": {
+        "format": "umd"
+      }
+    }
+  },
   "devDependencies": {
-    "coffee-script": "^1.11.1",
-    "gulp": "^3.9.1"
+    "buble": "0.5.3",
+    "chokidar": "1.6.0",
+    "eslint": "3.5.0",
+    "eslint-config-airbnb-base": "7.1.0",
+    "eslint-plugin-import": "1.15.0",
+    "rollup": "0.36.3",
+    "tarima-cli": "0.2.10",
+    "tarima-lr": "0.0.5"
   }
 }
