--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pulltorefresh",
+  "name": "pulltorefresh.js",
   "version": "0.0.0",
   "description": "Pull To Refresh",
-  "main": "dist/index.js",
+  "main": "dist/pulltorefresh.js",
   "scripts": {
     "dev": "tarima -ws",
     "lint": "eslint src",
