--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pulltorefresh.js",
+  "name": "pulltorefresh",
   "version": "0.0.0",
   "description": "Pull To Refresh",
   "main": "dist/pulltorefresh.js",
