--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "pulltorefresh",
-  "version": "0.0.0",
+  "name": "pulltorefreshjs",
+  "version": "0.1.0",
   "description": "Pull To Refresh",
   "main": "dist/pulltorefresh.js",
   "authors": [
