Test harness setup, basic tests

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tarima -ws",
     "lint": "eslint src",
-    "build": "tarima -f"
+    "build": "tarima -f",
+    "test": "testem"
   },
   "author": "Rafael Soto",
   "license": "MIT",
@@ -50,5 +51,9 @@
     "rollup": "0.36.3",
     "tarima-cli": "0.2.10",
     "tarima-lr": "0.0.5"
+  },
+  "dependencies": {
+    "qunit": "0.9.1",
+    "qunit-cli": "^0.2.0"
   }
 }
