--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,9 @@
     "consistent-return": 0,
     "no-param-reassign": 0,
     "no-underscore-dangle": 0
+  },
+  "globals": {
+    "QUnit": true,
+    "PullToRefresh": true
   }
 }
