--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src",
     "build": "tarima -Ufqe dist -x tests",
     "build_min": "yarn build -- -OR '**/*.js:{basedir}/{name}.min.{ext}'",
-    "test": "testem ci",
+    "test": "yarn lint && testem ci",
     "dev_test": "testem"
   },
   "author": "Rafael Soto",
