--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "pulltorefreshjs",
-  "version": "0.1.3",
-  "dependencies": {
+  "version": "0.1.6",
+  "devDependencies": {
     "qunit": "2.1.0"
   },
   "description": "Pull To Refresh",
