--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "tarima -des",
     "lint": "eslint src",
     "build": "tarima -Ufqe dist -x tests",
-    "build_min": "yarn build -- -OR '**/*.js:{basedir}/{name}.min.{ext}'",
-    "test": "yarn lint && testem ci",
+    "build_min": "npm run build -- -OR '**/*.js:{basedir}/{name}.min.js'",
+    "pre_test": "npm run lint",
+    "test": "testem ci",
     "dev_test": "testem"
   },
   "author": "Rafael Soto",
@@ -46,17 +47,17 @@
     }
   },
   "devDependencies": {
-    "buble": "0.14.2",
-    "chokidar": "1.6.0",
+    "buble": "^0.18.0",
+    "chokidar": "^1.6.0",
     "csso": "^3.1.1",
-    "eslint": "3.5.0",
-    "eslint-config-airbnb-base": "7.1.0",
-    "eslint-plugin-import": "1.15.0",
-    "google-closure-compiler-js": "^20170521.0.0",
-    "less": "2.7.1",
-    "pug": "2.0.0-beta6",
-    "rollup": "^0.48.2",
-    "tarima": "^3.7.3",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "google-closure-compiler-js": "^20171203.0.0",
+    "less": "^2.7.1",
+    "pug": "^2.0.0-beta6",
+    "rollup": "^0.52.1",
+    "tarima": "^3.11.0",
     "tarima-lr": "^0.3.2"
   }
 }
