--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,9 @@
     "arrow-body-style": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "no-restricted-globals": 0,
+    "no-multi-assign": 0
   },
   "globals": {
     "QUnit": true,
