Fix build task; again

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "tarima -des",
     "lint": "eslint src",
     "build_full": "tarima -Ufqe dist -x tests",
-    "build_min": "npm run build -- -OR '**/*.js:{basedir}/{name}.min.js'",
-    "build": "npm run build && npm run build_min",
+    "build_min": "npm run build_full -- -OR '**/*.js:{basedir}/{name}.min.js'",
+    "build": "npm run build_full && npm run build_min",
     "pretest": "npm run lint",
     "test": "testem ci",
     "dev_test": "testem"
