--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Pull To Refresh",
   "main": "dist/pulltorefresh.js",
   "scripts": {
-    "dev": "tarima -des",
+    "dev": "tarima watch -s",
     "lint": "eslint src",
-    "build_full": "tarima -Ufqe dist -x tests",
-    "build_min": "npm run build_full -- -OR '**/*.js:{basedir}/{name}.min.js'",
+    "build_full": "tarima -Ufx tests",
+    "build_min": "npm run build_full -- -y js -OR '**/*.js:{basedir}/{name}.min.js'",
     "build": "npm run build_full && npm run build_min",
     "pretest": "npm run lint",
     "test": "testem ci",
@@ -16,9 +16,9 @@
   "author": "Rafael Soto",
   "license": "MIT",
   "tarima": {
-    "src": "src",
+    "from": "src",
     "public": ".",
-    "dest": ".",
+    "output": ".",
     "rename": [
       "**/*.js:dist/{fullpath/1}",
       "**/demos/**:{fullpath/1}",
@@ -49,7 +49,6 @@
   },
   "devDependencies": {
     "buble": "^0.18.0",
-    "chokidar": "^1.6.0",
     "csso": "^3.1.1",
     "eslint": "^4.13.1",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -57,8 +56,8 @@
     "google-closure-compiler-js": "^20171203.0.0",
     "less": "^2.7.1",
     "pug": "^2.0.0-beta6",
-    "rollup": "^0.52.1",
-    "tarima": "^3.11.0",
-    "tarima-lr": "^0.3.2"
+    "rollup": "^0.53.0",
+    "tarima": "^4.0.1",
+    "tarima-lr": "^0.4.0"
   }
 }
