--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "env": {
     "es6": true,
+    "node": true,
     "browser": true
   },
   "extends": "airbnb-base",
@@ -8,18 +9,26 @@
     "sourceType": "module"
   },
   "rules" : {
+    "max-len": ["error", {
+      "code": 150
+    }],
+    "arrow-parens": ["error", "as-needed"],
+    "no-multi-assign": 0,
     "strict": 0,
-    "new-cap": 0,
     "no-console": 0,
+    "prefer-destructuring": 0,
+    "function-paren-newline": 0,
+    "global-require": 0,
+    "prefer-spread": 0,
+    "prefer-rest-params": 0,
+    "prefer-arrow-callback": 0,
     "arrow-body-style": 0,
+    "no-restricted-globals": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
-    "no-restricted-globals": 0,
-    "no-multi-assign": 0
-  },
-  "globals": {
-    "QUnit": true,
-    "PullToRefresh": true
+    "import/no-unresolved": 0,
+    "import/no-dynamic-require": 0,
+    "import/no-extraneous-dependencies": 0
   }
 }
