--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tarima watch -s",
     "lint": "eslint src",
     "build_full": "tarima -Ufx tests",
-    "build_min": "npm run build_full -- -y js -OR '**/*.js:{basedir}/{name}.min.js'",
+    "build_min": "npm run build_full -- -y js -mR '**/*.js:dist/pulltorefresh.min.js'",
     "build": "npm run build_full && npm run build_min",
     "pretest": "npm run lint",
     "test": "testem ci",
