--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pulltorefreshjs",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Pull To Refresh",
   "main": "dist/pulltorefresh.js",
   "scripts": {
@@ -13,6 +13,9 @@
     "test": "testem ci",
     "dev_test": "testem"
   },
+  "files": [
+    "dist/*.js"
+  ],
   "author": "Rafael Soto",
   "license": "MIT",
   "tarima": {
