--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "dev": "tarima watch -s",
     "lint": "eslint src",
-    "build_full": "tarima -Ufx tests",
-    "build_min": "npm run build_full -- -y js -mR '**/*.js:dist/pulltorefresh.min.js'",
-    "build": "npm run build_full && npm run build_min",
+    "build:browser": "bili src/lib/index.js --target browser --format umd-min --name pulltorefresh --moduleName PullToRefresh --js buble",
+    "build:nodejs": "bili src/lib/index.js --target node --js buble --format es,cjs",
+    "build:styles": "lessc src/docs/style.less docs/style.css -x --source-map-inline",
+    "build:demos": "pug src/docs/demos --out docs/demos",
+    "build:index": "pug src/docs/index.pug --out docs",
+    "build:docs": "npm run build:styles && npm run build:demos && npm run build:index && cp dist/*.min* docs",
+    "build:lib": "npm run build:browser && npm run build:nodejs",
+    "build": "npm run build:lib && npm run build:docs",
+    "serve": "live-server docs",
+    "watch": "npm run build:browser -- -w",
+    "dev": "npm run serve & npm run watch",
     "pretest": "npm run lint",
     "test": "testem ci",
     "dev_test": "testem"
@@ -18,42 +26,13 @@
   ],
   "author": "Rafael Soto",
   "license": "MIT",
-  "tarima": {
-    "from": "src",
-    "public": ".",
-    "output": ".",
-    "rename": [
-      "**/demos/**:{fullpath/1}",
-      "**/tests/**:{fullpath/1}",
-      "**/index.js:dist/pulltorefresh.js"
-    ],
-    "bundle": true,
-    "filter": [
-      "!_*",
-      "!**/_*",
-      "!**/_*/**"
-    ],
-    "ignoreFiles": [
-      ".gitignore"
-    ],
-    "devPlugins": [
-      "tarima-lr"
-    ],
-    "bundleOptions": {
-      "extensions": {
-        "js": "es6"
-      },
-      "rollup": {
-        "bundle": "PullToRefresh"
-      }
-    }
-  },
   "devDependencies": {
     "bili": "^3.1.2",
     "eslint": "^4.13.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "less": "^3.8.1",
+    "live-server": "^1.2.0",
     "pug": "^2.0.0-beta6",
     "pug-cli": "^1.0.0-alpha6",
     "rollup": "^0.58.0"
