Revert docs/ => demos/; cleanup

--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "lint": "eslint src",
     "build:browser": "bili src/lib/index.js --target browser --format umd-min --name pulltorefresh --moduleName PullToRefresh --js buble",
     "build:nodejs": "bili src/lib/index.js --target node --js buble --format es,cjs",
-    "build:styles": "lessc src/docs/style.less docs/style.css -x --source-map-inline",
-    "build:demos": "pug src/docs/demos --out docs/demos",
-    "build:index": "pug src/docs/index.pug --out docs",
-    "build:docs": "npm run build:styles && npm run build:demos && npm run build:index && cp dist/*.min* docs",
+    "build:styles": "lessc src/style.less demos/style.css -x --source-map-inline",
+    "build:demos": "pug src/demos --pretty --out demos && pug src/index.pug --pretty --out demos",
+    "build:all": "npm run build:styles && npm run build:demos && cp dist/*.min* demos",
     "build:lib": "npm run build:browser && npm run build:nodejs",
-    "build": "npm run build:lib && npm run build:docs",
-    "serve": "live-server docs",
+    "build": "npm run build:lib && npm run build:all",
+    "serve": "live-server demos",
     "watch": "npm run build:browser -- -w",
     "dev": "npm run serve & npm run watch",
     "pretest": "npm run lint",
