--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "serve": "live-server demos",
     "watch": "npm run build:browser -- -w",
     "dev": "npm run serve & npm run watch",
+    "prepublish": "npm run build",
     "pretest": "npm run lint",
-    "test:e2e": "testcafe 'chrome:headless:emulation:device=iphone 6' tests/e2e/cases",
-    "test:ci": "testem ci && (npm run serve & npm run test:e2e)",
-    "dev_test": "testem"
+    "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
+    "test:ci": "testcafe 'chrome:headless:emulation:device=iphone 6' tests/e2e/cases"
   },
   "files": [
     "dist/*.js"
