--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "watch": "npm run build:browser -- -w",
     "dev": "npm run serve & npm run watch",
     "prepublish": "npm run build",
-    "pretest": "npm run lint",
+    "pretest": "npm run lint && NODE_ENV=test npm run build:demos",
     "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
     "test:ci": "testcafe 'chrome:headless:emulation:device=iphone 6' tests/e2e/cases"
   },
