--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepublish": "npm run build",
     "pretest": "npm run lint && NODE_ENV=test npm run build:demos --",
     "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
-    "test:ci": "testcafe 'chrome:headless:emulation:device=iphone 6' tests/e2e/cases"
+    "test:ci": "testcafe 'chrome:headless' tests/e2e/cases -a 'npm run serve -- --no-browser'"
   },
   "files": [
     "dist/*.js"
