Added 'Repository' property to package.json so that the  command can open the repository.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test": "testem ci",
     "dev_test": "testem"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BoxFactura/pulltorefresh.js.git"
+  },
   "files": [
     "dist/*.js"
   ],
