Added 'Repository' property to package.json so that the  command can open the repository.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
     "test:ci": "testcafe 'chrome:headless' tests/e2e/cases -a 'npm run serve -- --no-browser'"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BoxFactura/pulltorefresh.js.git"
+  },
   "files": [
     "dist/*.js"
   ],
