Cleanup before release v0.1.16
- Added 'Repository' property to package.json so that the  command can open the repository.
- Build library before publishing; fix
- Set !mainElement.scrollTop as default shouldPullToRefresh condition
- Fix #57. The PTR stops response when destroyed while working.
- When PTR is destroyed while working it is left in the state 'Refreshing' and not respond.

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "serve": "live-server demos",
     "watch": "npm run build:browser -- -w",
     "dev": "npm run serve & npm run watch",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build:lib",
     "pretest": "npm run lint && NODE_ENV=test npm run build:demos --",
     "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
     "test:ci": "testcafe 'chrome:headless' tests/e2e/cases -a 'npm run serve -- --no-browser'"
-  },
+  },  
   "files": [
     "dist/*.js"
   ],
@@ -31,7 +31,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "less": "^3.8.1",
-    "live-server": "^1.2.0",
+    "live-server": "^1.2.1",
     "pug-cli": "^1.0.0-alpha6",
     "testcafe": "^0.22.0"
   }
