Added 'Repository' property to package.json so that the  command can open the repository.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "type": "git",
     "url": "git+https://github.com/BoxFactura/pulltorefresh.js.git"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BoxFactura/pulltorefresh.js.git"
+  },
   "files": [
     "dist/*.js"
   ],
