--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve": "live-server demos",
     "watch": "npm run build:browser -- -w",
     "dev": "npm run serve & npm run watch",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build:lib",
     "pretest": "npm run lint && NODE_ENV=test npm run build:demos --",
     "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
     "test:ci": "testcafe 'chrome:headless' tests/e2e/cases -a 'npm run serve -- --no-browser'"
