Fixed output bundles

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "pulltorefreshjs",
   "version": "0.1.16",
   "description": "Pull To Refresh",
-  "main": "dist/pulltorefresh.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "browser": "dist/index.umd.js",
   "scripts": {
     "lint": "eslint src",
     "build:browser": "bili src/lib/index.js --banner --minimal --format umd --format umd-min --module-name PullToRefresh",
-    "build:nodejs": "bili src/lib/index.js --minimal --format es --format cjs",
+    "build:nodejs": "bili src/lib/index.js --minimal --format es --format cjs --module-name PullToRefresh",
     "build:styles": "lessc src/style.less demos/style.css -x --source-map-inline",
     "build:demos": "pug src/demos --pretty --out demos && pug src/index.pug --pretty --out demos",
     "build:all": "npm run build:styles && npm run build:demos && cp dist/*.min* demos",
