Ensure lib is built after E2E tests; fix

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "build:nodejs": "bili src/lib/index.js --minimal --format es --format cjs --module-name PullToRefresh",
     "build:styles": "lessc src/style.less demos/style.css -x --source-map-inline",
     "build:demos": "pug src/demos --pretty --out demos && pug src/index.pug --pretty --out demos",
-    "build:all": "npm run build:styles && npm run build:demos && cp dist/*.min* demos",
+    "build:test": "npm run build:styles && npm run build:demos && cp dist/*.min* demos",
     "build:lib": "npm run build:browser && npm run build:nodejs",
-    "build": "npm run build:lib && npm run build:all",
+    "build": "npm run build:lib && npm run build:test",
     "serve": "live-server demos",
     "watch": "npm run build:browser -- -w",
     "dev": "npm run serve & npm run watch",
     "prepublish": "npm run build:lib",
-    "pretest": "npm run lint && NODE_ENV=test npm run build:demos --",
+    "pretest": "npm run lint && NODE_ENV=test npm run build --",
     "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
     "test:ci": "testcafe 'chrome:headless' tests/e2e/cases -a 'npm run serve -- --no-browser'"
   },
