--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-import": "^2.8.0",
     "less": "^3.8.1",
     "live-server": "^1.2.1",
+    "lodash": "^4.17.14",
     "pug-cli": "^1.0.0-alpha6",
     "testcafe": "^1.1.3"
   }
