--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "npm run serve & npm run watch",
     "prepublish": "npm run build:lib",
     "pretest": "npm run lint && NODE_ENV=test npm run build --",
+    "posttest": "git checkout -- demos dist",
     "test": "testcafe chrome tests/e2e/cases -a 'npm run serve -- --no-browser'",
     "test:ci": "testcafe 'chrome:headless' tests/e2e/cases -a 'npm run serve -- --no-browser'"
   },
