--- a/package.json
+++ b/package.json
@@ -30,21 +30,21 @@
   "license": "MIT",
   "devDependencies": {
     "bili": "^4.8.1",
+    "ejs": ">=2.5.5",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-utils": ">=1.4.1",
+    "express": ">=3.11.0",
     "less": "^3.8.1",
     "live-server": "^1.2.1",
     "lodash": "^4.17.14",
     "mixin-deep": ">=1.3.2",
+    "moment": ">=2.19.3",
     "pug-cli": "^1.0.0-alpha6",
     "set-value": ">=2.0.1",
-    "testcafe": "^15.1.317922",
-    "ws": ">=3.3.1",
-    "express": ">=3.11.0",
+    "testcafe": "^1.5.0-rc.1",
     "useragent": ">=2.1.13",
-    "ejs": ">=2.5.5",
-    "moment": ">=2.19.3"
+    "ws": ">=3.3.1"
   }
 }
