--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "prepublish": "npm run build:lib",
     "pretest": "npm run lint && NODE_ENV=test npm run build --",
     "posttest": "git checkout -- demos dist",
-    "test": "testcafe 'chrome' -a 'npm run serve -- --no-browser'",
-    "test:ci": "testcafe 'chrome:headless' -a 'npm run serve -- --no-browser'"
+    "test": "testcafe ${BROWSER:-chrome:headless} -a 'npm run serve -- --no-browser' tests/e2e/cases"
   },
   "files": [
     "dist/*.js"
