--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": ">=3.11.0",
     "less": "^3.8.1",
     "live-server": "^1.2.1",
+    "serialize-javascript": ">=2.1.1",
     "lodash": "^4.17.14",
     "mixin-deep": ">=1.3.2",
     "moment": ">=2.19.3",
