--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
     "testcafe": "^1.5.0-rc.1",
     "useragent": ">=2.1.13",
     "ws": ">=3.3.1"
+  },
+  "dependencies": {
+    "acorn": "^7.1.1",
+    "minimist": "^1.2.5"
   }
 }
