--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Rafael Soto",
   "license": "MIT",
   "devDependencies": {
+    "acorn": "^7.1.1",
     "bili": "^4.8.1",
     "ejs": ">=2.5.5",
     "eslint": "^6.1.0",
@@ -37,18 +38,16 @@
     "express": ">=3.11.0",
     "less": "^3.8.1",
     "live-server": "^1.2.1",
-    "serialize-javascript": ">=2.1.1",
     "lodash": "^4.17.14",
+    "minimist": "^1.2.5",
     "mixin-deep": ">=1.3.2",
     "moment": ">=2.19.3",
     "pug-cli": "^1.0.0-alpha6",
+    "serialize-javascript": ">=2.1.1",
     "set-value": ">=2.0.1",
     "testcafe": "^1.5.0-rc.1",
     "useragent": ">=2.1.13",
     "ws": ">=3.3.1"
   },
-  "dependencies": {
-    "acorn": "^7.1.1",
-    "minimist": "^1.2.5"
-  }
+  "dependencies": {}
 }
