--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "acorn": "^7.1.1",
     "bili": "^4.8.1",
+    "dot-prop": ">=5.1.1",
     "ejs": ">=2.5.5",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -43,7 +44,7 @@
     "mixin-deep": ">=1.3.2",
     "moment": ">=2.19.3",
     "pug-cli": "^1.0.0-alpha6",
-    "serialize-javascript": ">=2.1.1",
+    "serialize-javascript": ">=3.1.0",
     "set-value": ">=2.0.1",
     "testcafe": "^1.5.0-rc.1",
     "useragent": ">=2.1.13",
